examples/good/09-01-global-variables.see
int g = 2100;

int calc() {
    return g + 15;
}

void main() {
    printInt(calc());

    return;
}
