examples/bad/in/00-02-int-parse.see
void main() {
    int x = toInt("123_");
}